@@ -15,5 +15,6 @@ rem)
 :Start
 cd %minecraftServerPath%
 rem call %telegramScriptPath% %minecraftGroup% "#ServerUP @ %myip%"
-java -Xms1024m -Xmx1024m -jar %minecraftServerPath%\minecraft_server.1.9.jar nogui
+rem java -Xms1024m -Xmx2048m -jar %minecraftServerPath%\minecraft_server.1.11.2.jar nogui
+java -Xms512M -Xmx1G -XX:MaxPermSize=128M -XX:+UseConcMarkSweepGC -jar spigot-1.11.2.jar
 rem call %telegramScriptPath% %minecraftGroup% "#ServerDown @ %myip%"
